--- a/src/_components/ResponsiveTopNav.css
+++ b/src/_components/ResponsiveTopNav.css
@@ -12,11 +12,18 @@
     align-items: center;
     justify-content: space-between;
     background-color: black;
+    position: relative;
+    box-shadow: 0 5px 5px cyan;
+    z-index: 1;
 }
 
 .top-nav-link-list,
 .top-nav-social-list {
     gap: 10px;
+}
+
+.top-nav-social-list {
+    margin-left: 50px;
 }
 
 .top-nav-link-list {
@@ -32,7 +39,8 @@
     color: cyan;
 }
 
-.top-nav-link-list li:hover {
+.top-nav-link-list li:hover,
+.top-nav-link-list li.active {
     cursor: pointer;
     background-color: cyan;
     color: black;
@@ -59,4 +67,75 @@
 .social-link:hover {
     color: black;
     background-color: cyan;
+    cursor: pointer;
+}
+
+.hamburger-menu-btn {
+    display: none;
+    color: cyan;
+    font-size: 48px;
+    justify-self: center;
+}
+
+.mobile-nav {
+    display: none;
+    position: absolute;
+    background-color: black;
+    color: cyan;
+    width: 100%;
+}
+
+.mobile-nav-list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    padding: 0;
+}
+
+.mobile-nav-list li {
+    width: 100%;
+    padding: 10px;
+}
+
+.mobile-nav-list li:hover {
+    cursor: pointer;
+    background-color: cyan;
+    color: black
+}
+
+@media screen and (max-width: 480px) {
+
+    .top-nav-link-list,
+    .top-nav-social-list {
+        display: none;
+    }
+
+    .hamburger-menu-btn {
+        display: block;
+        order: -1;
+    }
+
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .top-nav-link-list {
+        display: none;
+    }
+
+    .top-nav-social-list {
+        padding: 0;
+        order: 3;
+        margin: 0;
+    }
+
+    .logo {
+        order: 2;
+    }
+
+    .hamburger-menu-btn {
+        display: block;
+        order: -1;
+    }
 }
